# hospitals_paris

./: .gitignore  README.md  docker-compose.yml  dockerfile  draft.ipynb  pyproject.toml
data/: init.sql
frontend/: index.html
src/: main.py  models.py
src/config/: settings.py
src/db/: database.py  populate_database.py  queries.py
src/routers/: nearest_hospital.py
src/services/: algorithms.py
src/utils/: osm_data_manager.py
