[project]
name = "hospitals-paris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "osmnx>=2.0.5",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "matplotlib>=3.10.5",
    "ruff>=0.12.8",
]



